Animaciones navbar y estilos en title

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                     <li class="navbar_item"><a class="navbar_link" href="#home">Home</a></li>
                     <li class="navbar_item"><a class="navbar_link" href="#lascano">Dra. Lascano</a></li>
                     <li class="navbar_item"><a class="navbar_link" href="#services">Servicios</a></li>
-                    <li class="navbar_item mr-0"><a class="navbar_link" href="#contacto">Servicios</a></li>
+                    <li class="navbar_item mr-0"><a class="navbar_link" href="#contacto">Contacto</a></li>
                 </ul>
             </div>
         </nav>
@@ -52,7 +52,7 @@
        <div class="main_banner">
         <img src="./img/fondo_optimo.jpg" alt="main-image" class="main_banner-image">
             <div class="main_banner-content">
-                <h1 class="main_banner-title">Mercedes Lascano</h1>
+                <h1 class="main_banner-title">Mercedes <span class="main_banner-title-span">Lascano</span></h1>
                 <p class="main_banner-description text-uppercase">Abogada</p>
                 <div class="main_banner_content-parrafo">
                     <span class="main_banner-parrafo">Justicia</span>
@@ -76,8 +76,8 @@
             <div class="col-12 col-md-11 contenido">
                 <div class="main_content_icon"></div>
                 <div class="frase_content-text">
-                    <h3 class="main_content-frase">Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis quam dolorem et, quasi earum quae labore itaque consequatur ratione quaerat!</h3>
-                    <p class="main_content-autor">Benjamin Boton</p>
+                    <h3 class="main_content-frase">No importa que tan difícil sea tu problema. <br> Lo importante es que estas tratando de solucionarlo y buscas ayuda!. </h3>
+                    <p class="main_content-autor">Mercedes Lascano</p>
                 </div>
             </div>
             <div class="d-none d-md-block col-md-1 lateral">
@@ -216,7 +216,7 @@
             <div class="container">
                 <img src="./img/fondoLascano.jpg" alt="main-image" class="main_banner-image">
                 <div class=" row main_banner-content">
-                    <div class="col-12 col-md-8">
+                    <div class="col-12 mb-4 col-md-8">
                         <h4 class="call_title">¿Necesitas un abogado?</h4>
                         <p class="call_description">
                             Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam dignissimos neque placeat facere minima recusandae molestias aliquid. Eligendi dolore vel deleniti expedita non dicta quisquam eum, sint earum provident esse.
