Optimizacion de menu, creacion de logo y sombra de cajas

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <!-- Navbar -->
         <nav class="header_navbar">
             <div class="container navbar_container">
-                <a href="#home"><img class="logo"  src="./img/logolascano.png" alt="logo_Lascano"></a>
+                <a href="#home"><img class="logo"  src="./img/logoascano.svg" alt="logo_Lascano"></a>
                 <ul class="navbar_content">
                     <li class="navbar_item"><a class="navbar_link" href="#home">Home</a></li>
                     <li class="navbar_item"><a class="navbar_link" href="#lascano">Dra. Lascano</a></li>
@@ -97,7 +97,7 @@
                 <div class="row lascano_content-text">
                     <div class="d-none d-md-block col-md-5 lascano_colum_image">
                         <div class=" lascano_content-image">
-                            <img src="./img/contactanos.jpg" alt="" class="lascano_image">
+                            <img src="./img/lascano.jpg" alt="img contacto" class="lascano_image">
                         </div>
                     </div>
                     <div class="col-12 col-md-7 lascano_container-content">
@@ -132,8 +132,8 @@
             </div>
             <!-- Jumbotron -->
             <div class="row justify-content-center">
-                <div class="col-12">
-                    <div class="jumbotron">
+                <div class="col-12 ">
+                    <div class="jumbotron services_destacado">
                         <h1 class="display-4 jumbo_title">Especialistas en Derecho previsional!</h1>
                         <p class="lead">Nuestra experiencia nos respalda.</p>
                         <hr class="my-4">
@@ -146,7 +146,7 @@
             <div class="row d-flex flex-wrap services_content-card">
                 <!-- Derecho civil -->
                 <div class="col-12 mt-4 col-sm-6 mt-sm-4 col-md-4 d-flex justify-content-center">
-                    <div class="card" style="width: 18rem;">
+                    <div class="card card_shadow" style="width: 18rem;">
                         <!-- <img src="..." class="card-img-top" alt="..."> -->
                         <div class="services_content-icon">
                             <i class="fas fa-gavel services_icon"></i>
@@ -168,7 +168,7 @@
                 </div>
                 <!-- Derecho laboral -->
                 <div class="col-12 mt-4 col-sm-6 mt-sm-4 col-md-4 d-flex justify-content-center">
-                    <div class="card" style="width: 18rem;">
+                    <div class="card card_shadow" style="width: 18rem;">
                         <!-- <img src="..." class="card-img-top" alt="..."> -->
                         <div class="services_content-icon">
                             <i class="fas fa-hard-hat services_icon"></i>
@@ -188,7 +188,7 @@
                 </div>
                 <!-- Derecho de familia -->
                 <div class="col-12 mt-4 col-sm-6 mt-sm-4 col-md-4 d-flex justify-content-center">
-                    <div class="card" style="width: 18rem;">
+                    <div class="card card_shadow" style="width: 18rem;">
                         <!-- <img src="..." class="card-img-top" alt="..."> -->
                         <div class="services_content-icon">
                             <i class="fas fa-users services_icon"></i>
@@ -214,7 +214,7 @@
     <!-- Call to action -->
         <div class="main_banner">
             <div class="container">
-                <img src="./img/fondoLascano.jpg" alt="main-image" class="main_banner-image">
+                <img src="./img/fondo_optimo.jpg" alt="main-image" class="main_banner-image">
                 <div class=" row main_banner-content">
                     <div class="col-12 mb-4 col-md-8">
                         <h4 class="call_title">¿Necesitas un abogado?</h4>
@@ -237,15 +237,15 @@
             <h2 class="lascano_title">Contacto</h2>
             <span class="lascano_subtitle"></span>
         </div>
-        <div class="row">
+        <div class="row mb-5">
             <div class="col-12 d-flex flex-row justify-content-center">
-                <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdxhMYfJ4gPYp6JTASzPAOHtXrnCVxgcKggDoTs3vayX2NHrA/viewform?embedded=true" width="640" height="812" frameborder="0" marginheight="0" marginwidth="0">Cargando…</iframe>
+                <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdxhMYfJ4gPYp6JTASzPAOHtXrnCVxgcKggDoTs3vayX2NHrA/viewform?embedded=true" width="640" height="677" frameborder="0" marginheight="0" marginwidth="0">Cargando…</iframe>
             </div>
         </div>
     </div>
 
     <!-- Map -->
-    <div class="map">
+    <!-- <div class="map">
         <div class="container map_content">
             <div class="row justify-content-center">
                 <div class="col-6 mapWrapper">
@@ -253,28 +253,33 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
 
     <!-- Footer -->
     <footer class="footer">
-        <div class="row footer_content">
-            <div class="col-12 col-md-4">
-                <p class="footer_data">
-                    Lavalle 1454 1er Piso Ofic 65 <br>
-                    Ciudad Autonoma De Buenos Aires <br>
-                    Celular: 11-67029262 <br>
-                    mail: lascano.estudiojuridico@gmail.com
-                </p>
-            </div>
-            <div class="col-12 text-center col-md-4">
-                logo
-            </div>
-            <div class="col-12 text-center col-md-4 footer_data">
-                <p class="footer_link"> Enlaces utiles:</p>
-                <a class="footer_link" href=" https://www.anses.gob.ar/" target="blank">Anses</a>
-                <a class="footer_link" href="http://afip.gov.ar/sitio/externos/default.asp" target="blank">Afip</a>
-                <a class="footer_link" href="https://www.boletinoficial.gob.ar/" target="blank">Boletin oficial</a>
-                <a class="footer_link" href="https://www.argentina.gob.ar/srt" target="blank">SRT</a>
+        <div class="container">
+            <div class="row footer_content">
+                <div class="col-12 col-md-4">
+                    <p class="footer_data">
+                        Lavalle 1454 1er Piso Ofic 65 <br>
+                        Ciudad Autonoma De Buenos Aires <br>
+                        Celular: 11-67029262 <br>
+                        mail: lascano.estudiojuridico@gmail.com
+                    </p>
+                </div>
+                <div class="col-12 col-md-4 mapWrapper">
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3284.0437821455193!2d-58.38953638555242!3d-34.603054380459554!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bccac6957d6e7b%3A0xa9de1567a54a175e!2sLavalle%201454%2C%20C1048%20AAJ%2C%20Buenos%20Aires!5e0!3m2!1ses!2sar!4v1594587051227!5m2!1ses!2sar" width="600" height="200" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+                </div>
+                <!-- <div class="col-12 text-center col-md-4">
+                    logo
+                </div> -->
+                <div class="col-12 text-center col-md-4 footer_data">
+                    <p class="footer_link"> Enlaces utiles:</p>
+                    <a class="footer_link" href=" https://www.anses.gob.ar/" target="blank">Anses</a>
+                    <a class="footer_link" href="http://afip.gov.ar/sitio/externos/default.asp" target="blank">Afip</a>
+                    <a class="footer_link" href="https://www.boletinoficial.gob.ar/" target="blank">Boletin oficial</a>
+                    <a class="footer_link" href="https://www.argentina.gob.ar/srt" target="blank">SRT</a>
+                </div>
             </div>
         </div>
     </footer>
